# ros2-study

./: .gitignore
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_cpp_pkg/lib/my_cpp_pkg/: LED_panel_node  battery_node  hw_status_publisher
ros2_ws/install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh
ros2_ws/install/my_py_pkg/share/my_py_pkg/: package.sh
ros2_ws/install/my_robot_interfaces/include/my_robot_interfaces/my_robot_interfaces/msg/detail/: led_panel_state__functions.c  led_panel_state__struct.h  led_panel_state__traits.hpp
ros2_ws/install/my_robot_interfaces/include/my_robot_interfaces/my_robot_interfaces/srv/detail/: compute_rectangle_area__description.c  set_led__functions.c  set_led__struct.h  set_led__struct.hpp  set_led__traits.hpp  set_led__type_support.c
ros2_ws/install/my_robot_interfaces/share/ament_index/resource_index/parent_prefix_path/: my_robot_interfaces
ros2_ws/install/my_robot_interfaces/share/my_robot_interfaces/: package.sh
ros2_ws/install/my_robot_interfaces/share/my_robot_interfaces/msg/: LedPanelState.json
ros2_ws/install/my_robot_interfaces/share/my_robot_interfaces/srv/: SetLed.idl
ros2_ws/log/: latest_build
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/my_cpp_pkg/src/: LED_panel_node.cpp  battery_node.cpp  hardware_status_publisher.cpp  template_cpp_node.cpp
ros2_ws/src/my_py_pkg/: package.xml  setup.py
ros2_ws/src/my_py_pkg/my_py_pkg/: template_python_node.py
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt
ros2_ws/src/my_robot_interfaces/msg/: LedPanelState.msg
